// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`wix: easyblog.har 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\" ?>

<!-- This is a WordPress eXtended RSS file generated by the \\"Free (as in Speech)\\" browser extension, as an export of your site. -->
<!-- It contains information about your site's posts, pages, comments, categories, and other content. -->
<!-- You may use this file to transfer that content from one site to another. -->
<!-- This file is not intended to serve as a complete backup of your site. -->

<!-- To import this information into a WordPress site follow these steps: -->
<!-- 1. Log in to that site as an administrator. -->
<!-- 2. Go to Tools: Import in the WordPress admin panel. -->
<!-- 3. Install the \\"WordPress\\" importer from the list. -->
<!-- 4. Activate & Run Importer. -->
<!-- 5. Upload this file using the form provided on that page. -->
<!-- 6. You will first be asked to map the authors in this export file to users -->
<!--    on the site. For each author, you may choose to map to an -->
<!--    existing user on the site or to create a new user. -->
<!-- 7. WordPress will then import each of the posts, pages, comments, categories, etc. -->
<!--    contained in this file into your site. -->

<rss version=\\"2.0\\"
	xmlns:excerpt=\\"http://wordpress.org/export/1.3/excerpt/\\"
	xmlns:content=\\"http://purl.org/rss/1.0/modules/content/\\"
	xmlns:wfw=\\"http://wellformedweb.org/CommentAPI/\\"
	xmlns:dc=\\"http://purl.org/dc/elements/1.1/\\"
	xmlns:wp=\\"http://wordpress.org/export/1.3/\\"
>
<channel>
	<pubDate></pubDate>
	<wp:wxr_version>1.3</wp:wxr_version>
	<item>
		<title><![CDATA[hello blog]]></title>
		<pubDate><![CDATA[Thu, 18 Feb 2021 00:00:00 GMT]]></pubDate>
		<description></description>
		<content:encoded><![CDATA[<!-- wp:paragraph -->
<p>easyblog test</p>
<!-- /wp:paragraph -->

<!-- wp:heading {\\"level\\":3} -->
<h3>Heading 3</h3>
<!-- /wp:heading -->

<!-- wp:quote -->
<blockquote class=\\"wp-block-quote\\"><p>This is a quote</p></blockquote>
<!-- /wp:quote -->

<!-- wp:paragraph -->
<p><small>Here we've got some small text.</small></p>
<!-- /wp:paragraph -->]]></content:encoded>
		<wp:post_date><![CDATA[2021-02-18 00:00:00]]></wp:post_date>
		<wp:comment_status><![CDATA[closed]]></wp:comment_status>
		<wp:status><![CDATA[publish]]></wp:status>
		<wp:post_type><![CDATA[post]]></wp:post_type>
		<wp:is_sticky>0</wp:is_sticky>
		<category domain=\\"tag\\" nicename=\\"tag2\\">tag2</category>
		<category domain=\\"tag\\" nicename=\\"tag1\\">tag1</category>
	</item>
</channel>
</rss>"
`;

exports[`wix: empty.har 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\" ?>

<!-- This is a WordPress eXtended RSS file generated by the \\"Free (as in Speech)\\" browser extension, as an export of your site. -->
<!-- It contains information about your site's posts, pages, comments, categories, and other content. -->
<!-- You may use this file to transfer that content from one site to another. -->
<!-- This file is not intended to serve as a complete backup of your site. -->

<!-- To import this information into a WordPress site follow these steps: -->
<!-- 1. Log in to that site as an administrator. -->
<!-- 2. Go to Tools: Import in the WordPress admin panel. -->
<!-- 3. Install the \\"WordPress\\" importer from the list. -->
<!-- 4. Activate & Run Importer. -->
<!-- 5. Upload this file using the form provided on that page. -->
<!-- 6. You will first be asked to map the authors in this export file to users -->
<!--    on the site. For each author, you may choose to map to an -->
<!--    existing user on the site or to create a new user. -->
<!-- 7. WordPress will then import each of the posts, pages, comments, categories, etc. -->
<!--    contained in this file into your site. -->

<rss version=\\"2.0\\"
	xmlns:excerpt=\\"http://wordpress.org/export/1.3/excerpt/\\"
	xmlns:content=\\"http://purl.org/rss/1.0/modules/content/\\"
	xmlns:wfw=\\"http://wellformedweb.org/CommentAPI/\\"
	xmlns:dc=\\"http://purl.org/dc/elements/1.1/\\"
	xmlns:wp=\\"http://wordpress.org/export/1.3/\\"
>
<channel>
	<pubDate></pubDate>
	<wp:wxr_version>1.3</wp:wxr_version>
</channel>
</rss>"
`;

exports[`wix: rockfield.har 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\" ?>

<!-- This is a WordPress eXtended RSS file generated by the \\"Free (as in Speech)\\" browser extension, as an export of your site. -->
<!-- It contains information about your site's posts, pages, comments, categories, and other content. -->
<!-- You may use this file to transfer that content from one site to another. -->
<!-- This file is not intended to serve as a complete backup of your site. -->

<!-- To import this information into a WordPress site follow these steps: -->
<!-- 1. Log in to that site as an administrator. -->
<!-- 2. Go to Tools: Import in the WordPress admin panel. -->
<!-- 3. Install the \\"WordPress\\" importer from the list. -->
<!-- 4. Activate & Run Importer. -->
<!-- 5. Upload this file using the form provided on that page. -->
<!-- 6. You will first be asked to map the authors in this export file to users -->
<!--    on the site. For each author, you may choose to map to an -->
<!--    existing user on the site or to create a new user. -->
<!-- 7. WordPress will then import each of the posts, pages, comments, categories, etc. -->
<!--    contained in this file into your site. -->

<rss version=\\"2.0\\"
	xmlns:excerpt=\\"http://wordpress.org/export/1.3/excerpt/\\"
	xmlns:content=\\"http://purl.org/rss/1.0/modules/content/\\"
	xmlns:wfw=\\"http://wellformedweb.org/CommentAPI/\\"
	xmlns:dc=\\"http://purl.org/dc/elements/1.1/\\"
	xmlns:wp=\\"http://wordpress.org/export/1.3/\\"
>
<channel>
	<title><![CDATA[Rockfield]]></title>
	<link><![CDATA[https://PJ2UrF0ejtah.wixsite.com/my-site-11]]></link>
	<pubDate></pubDate>
	<wp:wxr_version>1.3</wp:wxr_version>
	<wp:base_site_url><![CDATA[https://PJ2UrF0ejtah.wixsite.com/my-site-11]]></wp:base_site_url>
	<wp:base_blog_url><![CDATA[https://PJ2UrF0ejtah.wixsite.com/my-site-11]]></wp:base_blog_url>
	<wp:term>
		<wp:term_id>10</wp:term_id>
		<wp:term_taxonomy><![CDATA[wp_template_part_area]]></wp:term_taxonomy>
		<wp:term_slug><![CDATA[header]]></wp:term_slug>
		<wp:term_parent><![CDATA[]]></wp:term_parent>
		<wp:term_name><![CDATA[header]]></wp:term_name>
	</wp:term>
	<wp:term>
		<wp:term_id>11</wp:term_id>
		<wp:term_taxonomy><![CDATA[wp_theme]]></wp:term_taxonomy>
		<wp:term_slug><![CDATA[tt1-blocks]]></wp:term_slug>
		<wp:term_parent><![CDATA[]]></wp:term_parent>
		<wp:term_name><![CDATA[tt1-blocks]]></wp:term_name>
	</wp:term>
	<wp:term>
		<wp:term_id>13</wp:term_id>
		<wp:term_taxonomy><![CDATA[wp_template_part_area]]></wp:term_taxonomy>
		<wp:term_slug><![CDATA[footer]]></wp:term_slug>
		<wp:term_parent><![CDATA[]]></wp:term_parent>
		<wp:term_name><![CDATA[footer]]></wp:term_name>
	</wp:term>
	<wp:term>
		<wp:term_id>11</wp:term_id>
		<wp:term_taxonomy><![CDATA[wp_theme]]></wp:term_taxonomy>
		<wp:term_slug><![CDATA[wp_theme]]></wp:term_slug>
		<wp:term_parent><![CDATA[]]></wp:term_parent>
		<wp:term_name><![CDATA[tt1-blocks]]></wp:term_name>
	</wp:term>
	<wp:term>
		<wp:term_id>21</wp:term_id>
		<wp:term_taxonomy><![CDATA[nav_menu]]></wp:term_taxonomy>
		<wp:term_slug><![CDATA[custom-main-menu-1]]></wp:term_slug>
		<wp:term_parent><![CDATA[]]></wp:term_parent>
		<wp:term_name><![CDATA[Custom Main Menu]]></wp:term_name>
	</wp:term>
	<wp:term>
		<wp:term_id>21</wp:term_id>
		<wp:term_taxonomy><![CDATA[nav_menu]]></wp:term_taxonomy>
		<wp:term_slug><![CDATA[custom-main-menu-1]]></wp:term_slug>
		<wp:term_parent><![CDATA[]]></wp:term_parent>
		<wp:term_name><![CDATA[Custom Main Menu]]></wp:term_name>
	</wp:term>
	<wp:term>
		<wp:term_id>21</wp:term_id>
		<wp:term_taxonomy><![CDATA[nav_menu]]></wp:term_taxonomy>
		<wp:term_slug><![CDATA[custom-main-menu-1]]></wp:term_slug>
		<wp:term_parent><![CDATA[]]></wp:term_parent>
		<wp:term_name><![CDATA[Custom Main Menu]]></wp:term_name>
	</wp:term>
	<wp:term>
		<wp:term_id>21</wp:term_id>
		<wp:term_taxonomy><![CDATA[nav_menu]]></wp:term_taxonomy>
		<wp:term_slug><![CDATA[custom-main-menu-1]]></wp:term_slug>
		<wp:term_parent><![CDATA[]]></wp:term_parent>
		<wp:term_name><![CDATA[Custom Main Menu]]></wp:term_name>
	</wp:term>
	<wp:term>
		<wp:term_id>21</wp:term_id>
		<wp:term_taxonomy><![CDATA[nav_menu]]></wp:term_taxonomy>
		<wp:term_slug><![CDATA[custom-main-menu-1]]></wp:term_slug>
		<wp:term_parent><![CDATA[]]></wp:term_parent>
		<wp:term_name><![CDATA[Custom Main Menu]]></wp:term_name>
	</wp:term>
	<item>
		<wp:post_id>1</wp:post_id>
		<title><![CDATA[Menu]]></title>
		<description></description>
		<content:encoded><![CDATA[<!-- wp:heading -->
<h2><strong>Menu</strong></h2>
<!-- /wp:heading -->

<!-- wp:paragraph -->
<p>The menu is a mix of French regional cuisines, and the menu changes with the seasons.<br>Be sure to ask about the daily specials!</p>
<!-- /wp:paragraph -->

<!-- wp:separator -->
<hr class=\\"wp-block-separator\\"/>
<!-- /wp:separator -->

<!-- wp:heading {\\"level\\":4} -->
<h4><strong>Starter</strong></h4>
<!-- /wp:heading -->

<!-- wp:columns -->
<div class=\\"wp-block-columns\\"><!-- wp:column -->
<div class=\\"wp-block-column\\"><!-- wp:paragraph -->
<p><strong>Pork Rillettes</strong></p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p>With quick pickle of dried apricots and pistachio crumble<br>$14.00</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p>​</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p><strong>Mini Tartes Flambées</strong></p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p>Served warm with honey and croûtons<br>$12.50$15.00</p>
<!-- /wp:paragraph --></div>
<!-- /wp:column -->

<!-- wp:column -->
<div class=\\"wp-block-column\\"><!-- wp:paragraph -->
<p><strong>Salmon Canapés</strong></p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p>Smoked salmon topped with crème fraîche, dill and capers<br>$15.00</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p><strong>Mini Tartes Flambées</strong></p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p>Smoked salmon topped with crème fraîche, dill and capers<br>$15.00</p>
<!-- /wp:paragraph -->

<!-- wp:separator -->
<hr class=\\"wp-block-separator\\"/>
<!-- /wp:separator --></div>
<!-- /wp:column -->

<!-- wp:column -->
<div class=\\"wp-block-column\\"><!-- wp:paragraph -->
<p><strong>Provençal Vegetable Tart</strong></p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p>With seasonal vegetables<br>$12.50</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p><strong>Mini Tartes Flambées</strong></p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p>Braised wild mushrooms served with seaweed and liquid nitrogen<br>$14.50</p>
<!-- /wp:paragraph --></div>
<!-- /wp:column --></div>
<!-- /wp:columns -->

<!-- wp:heading {\\"level\\":4} -->
<h4><strong>Mains</strong></h4>
<!-- /wp:heading -->

<!-- wp:paragraph -->
<p><strong>​Coq au Vin d’Alsace</strong></p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p><strong>Chicken cooked in Riesling with onions, mushrooms and herbs<br>$25.50</strong></p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p><strong>​Bouillabaisse</strong></p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p><strong>Traditional Provençal fish stew, with shrimp, mussels, clams and monkfish<br>$26.00</strong></p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p><strong>Côte de Boeuf</strong></p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p><strong>60 days aged rib steak, pepper sauce, fondant potatoes<br>$31.00</strong></p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p><strong>Duck à l’Orange</strong></p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p><strong>Roasted duck breast with crispy skin and velvety citrus sauce<br>$26.50</strong></p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p><strong>Sole Meunière</strong></p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p><strong>Pan-fried sole in butter and served with brown butter sauce, parsley and lemon<br>$28.00</strong></p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p><strong>​Pea and Asparagus Risotto</strong></p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p><strong>With goat’s cheese, rocket and baby shoot salad<br>$22.00</strong></p>
<!-- /wp:paragraph -->

<!-- wp:separator -->
<hr class=\\"wp-block-separator\\"/>
<!-- /wp:separator -->

<!-- wp:heading {\\"level\\":4} -->
<h4><strong>Desserts</strong></h4>
<!-- /wp:heading -->

<!-- wp:paragraph -->
<p><strong>Chocolate Macarons</strong></p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p><strong>A classic French delicacy, filled with rich chocolate ganache<br>$12.00</strong></p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p><strong>Crêpe Suzette</strong></p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p><strong>Delicate crêpe in buttery, orange sauce; served flambé<br>$13.00</strong></p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p><strong>​Tarte Tatin</strong></p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p><strong>Sticky caramel sauce with apples, served with whipped cream<br>$12.00</strong></p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p><strong>Lemon Tart</strong></p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p><strong>zesty lemon tang, creamy custard and topped with meringue<br>$12.00</strong></p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p><strong>Praline Cake</strong></p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p><strong>Multi-layer praline and chocolate cake with caramel cream cheese<br>$12.00</strong></p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p><strong>Trio of Fruit</strong></p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p><strong>Blueberries, strawberries, raspberries, plums and passion fruit<br>$28.00</strong></p>
<!-- /wp:paragraph -->

<!-- wp:separator -->
<hr class=\\"wp-block-separator\\"/>
<!-- /wp:separator -->

<!-- wp:paragraph -->
<p><em>Our fish is responsibly caught from sustainable sources.</em></p>
<!-- /wp:paragraph -->]]></content:encoded>
		<wp:comment_status><![CDATA[closed]]></wp:comment_status>
		<wp:status><![CDATA[publish]]></wp:status>
		<wp:post_type><![CDATA[page]]></wp:post_type>
		<wp:is_sticky>0</wp:is_sticky>
	</item>
	<item>
		<wp:post_id>2</wp:post_id>
		<title><![CDATA[Post]]></title>
		<description></description>
		<content:encoded><![CDATA[]]></content:encoded>
		<wp:comment_status><![CDATA[closed]]></wp:comment_status>
		<wp:status><![CDATA[publish]]></wp:status>
		<wp:post_type><![CDATA[page]]></wp:post_type>
		<wp:is_sticky>0</wp:is_sticky>
	</item>
	<item>
		<wp:post_id>3</wp:post_id>
		<title><![CDATA[Christmas Party at Rockfield’s]]></title>
		<description></description>
		<content:encoded><![CDATA[<!-- wp:heading {\\"level\\":1} -->
<h1><strong>Christmas Party at Rockfield’s</strong></h1>
<!-- /wp:heading -->

<!-- wp:paragraph -->
<p>Rockfield is available for Christmas parties of all sizes, so it’s high time to start planning your Christmas lunch or dinner.</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p>Click here to make a reservation today!</p>
<!-- /wp:paragraph -->

<!-- wp:group -->
<div class=\\"wp-block-group\\"><!-- wp:heading -->
<h2><strong>Published by Joan Smith</strong></h2>
<!-- /wp:heading -->

<!-- wp:paragraph -->
<p>My name is Joan Smith. I love discovering new literature.&nbsp;<a>View more posts</a></p>
<!-- /wp:paragraph --></div>
<!-- /wp:group -->

<!-- wp:separator -->
<hr class=\\"wp-block-separator\\"/>
<!-- /wp:separator -->

<!-- wp:paragraph -->
<p>Previous Post</p>
<!-- /wp:paragraph -->

<!-- wp:heading {\\"level\\":3} -->
<h3><a>Winter Menu</a></h3>
<!-- /wp:heading -->]]></content:encoded>
		<wp:comment_status><![CDATA[closed]]></wp:comment_status>
		<wp:status><![CDATA[publish]]></wp:status>
		<wp:post_type><![CDATA[page]]></wp:post_type>
		<wp:is_sticky>0</wp:is_sticky>
	</item>
	<item>
		<wp:post_id>4</wp:post_id>
		<title><![CDATA[What's On]]></title>
		<description></description>
		<content:encoded><![CDATA[<!-- wp:heading {\\"level\\":1} -->
<h1><strong>What’s On</strong></h1>
<!-- /wp:heading -->

<!-- wp:cover {\\"url\\":\\"https://static.wixstatic.com/media/ZDA5B_j5RedL9MFgZ0iaUowYVI71VO5RTpkl5~mv2.jpg\\",\\"id\\":14,\\"align\\":\\"full\\"} -->
<div class=\\"wp-block-cover alignfull has-background-dim\\"><img class=\\"wp-block-cover__image-background wp-image-14\\" alt=\\"\\" src=\\"https://static.wixstatic.com/media/ZDA5B_j5RedL9MFgZ0iaUowYVI71VO5RTpkl5~mv2.jpg\\" data-object-fit=\\"cover\\"/><div class=\\"wp-block-cover__inner-container\\"><!-- wp:separator -->
<hr class=\\"wp-block-separator\\"/>
<!-- /wp:separator -->

<!-- wp:heading {\\"level\\":1} -->
<h1><strong>Latest Updates From Us</strong></h1>
<!-- /wp:heading -->

<!-- wp:separator -->
<hr class=\\"wp-block-separator\\"/>
<!-- /wp:separator --></div></div>
<!-- /wp:cover -->]]></content:encoded>
		<wp:comment_status><![CDATA[closed]]></wp:comment_status>
		<wp:status><![CDATA[publish]]></wp:status>
		<wp:post_type><![CDATA[page]]></wp:post_type>
		<wp:is_sticky>0</wp:is_sticky>
	</item>
	<item>
		<wp:post_id>5</wp:post_id>
		<title><![CDATA[Reservations]]></title>
		<description></description>
		<content:encoded><![CDATA[<!-- wp:heading {\\"level\\":1} -->
<h1><strong>Reservations</strong></h1>
<!-- /wp:heading -->

<!-- wp:paragraph -->
<p>Let’s talk&nbsp; &nbsp; &nbsp; Don’t hesitate to reach out with the contact information below, or send a message using the form.</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p>​</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p>To book a table, call us or use the form below.</p>
<!-- /wp:paragraph -->

<!-- wp:image {\\"width\\":36,\\"height\\":36} -->
<figure class=\\"wp-block-image is-resized\\"><img src=\\"https://static.wixstatic.com/media/JdmUI_yteJBoBtYToixmOFoNYXF40kUU5JdTh~mv2.png\\" alt=\\"1f44b.png\\" width=\\"36\\" height=\\"36\\"/></figure>
<!-- /wp:image -->

<!-- wp:separator -->
<hr class=\\"wp-block-separator\\"/>
<!-- /wp:separator -->

<!-- wp:heading {\\"level\\":4} -->
<h4><strong>Location</strong></h4>
<!-- /wp:heading -->

<!-- wp:paragraph -->
<p>​</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p>1 Example Street</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p>Anytown, NY 10100</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p><a>example4@example.com</a></p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p>(555) 555 1234</p>
<!-- /wp:paragraph -->

<!-- wp:heading {\\"level\\":4} -->
<h4><strong>Open Hours</strong></h4>
<!-- /wp:heading -->

<!-- wp:paragraph -->
<p>Mon: closed<br>Tue – Sun: 11:30 am – 10:00 pm</p>
<!-- /wp:paragraph -->

<!-- wp:core-import/plugin-placeholder {\\"id\\":1} /-->]]></content:encoded>
		<wp:comment_status><![CDATA[closed]]></wp:comment_status>
		<wp:status><![CDATA[publish]]></wp:status>
		<wp:post_type><![CDATA[page]]></wp:post_type>
		<wp:is_sticky>0</wp:is_sticky>
	</item>
	<item>
		<wp:post_id>6</wp:post_id>
		<title><![CDATA[Home]]></title>
		<description></description>
		<content:encoded><![CDATA[<!-- wp:cover {\\"url\\":\\"https://static.wixstatic.com/media/5Dsu1_ZUNrjjTx3j1ZbikUbg2rP0eIE5gJllA~mv2.jpg\\",\\"id\\":16,\\"align\\":\\"full\\"} -->
<div class=\\"wp-block-cover alignfull has-background-dim\\"><img class=\\"wp-block-cover__image-background wp-image-16\\" alt=\\"\\" src=\\"https://static.wixstatic.com/media/5Dsu1_ZUNrjjTx3j1ZbikUbg2rP0eIE5gJllA~mv2.jpg\\" data-object-fit=\\"cover\\"/><div class=\\"wp-block-cover__inner-container\\"><!-- wp:separator -->
<hr class=\\"wp-block-separator\\"/>
<!-- /wp:separator -->

<!-- wp:heading -->
<h2><strong>Enjoy Our Food Experience</strong></h2>
<!-- /wp:heading -->

<!-- wp:separator -->
<hr class=\\"wp-block-separator\\"/>
<!-- /wp:separator --></div></div>
<!-- /wp:cover -->

<!-- wp:heading {\\"level\\":4} -->
<h4><strong>Welcome to Rockfield</strong></h4>
<!-- /wp:heading -->

<!-- wp:heading {\\"level\\":5} -->
<h5>​</h5>
<!-- /wp:heading -->

<!-- wp:paragraph -->
<p>Chef Patron Joan Smith and Executive Chef François Lemoine have teamed up to open one of the most exciting restaurants in Anytown.</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p>​</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p>Our specialty is delicious cuisine created with the ingenuity and passion inspired by the fantastic flavors of France itself. We take great pride in improving upon your favorite French dishes in new and creative ways.</p>
<!-- /wp:paragraph -->

<!-- wp:cover {\\"url\\":\\"https://static.wixstatic.com/media/e7Sgo_zJMHqoFuuTQ541QbqX7LxbqG8Yc8KJE~mv2.jpg\\",\\"id\\":17,\\"align\\":\\"full\\"} -->
<div class=\\"wp-block-cover alignfull has-background-dim\\"><img class=\\"wp-block-cover__image-background wp-image-17\\" alt=\\"\\" src=\\"https://static.wixstatic.com/media/e7Sgo_zJMHqoFuuTQ541QbqX7LxbqG8Yc8KJE~mv2.jpg\\" data-object-fit=\\"cover\\"/><div class=\\"wp-block-cover__inner-container\\"><!-- wp:separator -->
<hr class=\\"wp-block-separator\\"/>
<!-- /wp:separator -->

<!-- wp:heading -->
<h2><strong>Discover Our Menu</strong></h2>
<!-- /wp:heading -->

<!-- wp:separator -->
<hr class=\\"wp-block-separator\\"/>
<!-- /wp:separator --></div></div>
<!-- /wp:cover -->

<!-- wp:paragraph -->
<p>The menu is a mix of French regional cuisines, and the menu changes with the seasons.<br>Be sure to ask about the daily specials!</p>
<!-- /wp:paragraph -->

<!-- wp:separator -->
<hr class=\\"wp-block-separator\\"/>
<!-- /wp:separator -->

<!-- wp:heading {\\"level\\":4} -->
<h4><strong>Sample Menu</strong></h4>
<!-- /wp:heading -->

<!-- wp:paragraph -->
<p><strong>Starter</strong></p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p><strong>Fricassée of Wild Mushrooms</strong></p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p><strong>Braised wild mushrooms served with seaweed and liquid nitrogen<br>$14.50</strong></p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p><strong>​Main</strong></p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p><strong>Coq au Vin d’Alsace</strong></p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p><strong>Chicken cooked in Riesling with onions, mushrooms and herbs<br>$25.50</strong></p>
<!-- /wp:paragraph -->

<!-- wp:heading {\\"level\\":6} -->
<h6><strong>​</strong></h6>
<!-- /wp:heading -->

<!-- wp:paragraph -->
<p><strong>​</strong></p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p><strong>Dessert</strong></p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p><strong>Pumpkin Soufflé</strong></p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p><strong>With bourbon, cinnamon and molasses sauce<br>$9.00</strong></p>
<!-- /wp:paragraph -->

<!-- wp:heading {\\"level\\":6} -->
<h6><strong>​</strong></h6>
<!-- /wp:heading -->

<!-- wp:paragraph -->
<p><strong>​</strong></p>
<!-- /wp:paragraph -->

<!-- wp:buttons -->
<div class=\\"wp-block-buttons\\"><!-- wp:button -->
<div class=\\"wp-block-button\\"><a class=\\"wp-block-button__link\\" href=\\"/menu\\">View Menu</a></div>
<!-- /wp:button --></div>
<!-- /wp:buttons -->

<!-- wp:cover {\\"url\\":\\"https://static.wixstatic.com/media/sXYIH_PerVF1DoW7DmMdKJeul0lYHXnlbnWBW~mv2.jpg\\",\\"id\\":18,\\"align\\":\\"full\\"} -->
<div class=\\"wp-block-cover alignfull has-background-dim\\"><img class=\\"wp-block-cover__image-background wp-image-18\\" alt=\\"\\" src=\\"https://static.wixstatic.com/media/sXYIH_PerVF1DoW7DmMdKJeul0lYHXnlbnWBW~mv2.jpg\\" data-object-fit=\\"cover\\"/><div class=\\"wp-block-cover__inner-container\\"><!-- wp:separator -->
<hr class=\\"wp-block-separator\\"/>
<!-- /wp:separator -->

<!-- wp:heading -->
<h2><strong>Book Your Table</strong></h2>
<!-- /wp:heading -->

<!-- wp:separator -->
<hr class=\\"wp-block-separator\\"/>
<!-- /wp:separator --></div></div>
<!-- /wp:cover -->

<!-- wp:core-import/plugin-placeholder {\\"id\\":2} /-->

<!-- wp:cover {\\"url\\":\\"https://static.wixstatic.com/media/F9OC3_zZAcXfndF5z2Of4n5SKFw2Im3kKBwHP~mv2.jpg\\",\\"id\\":19,\\"align\\":\\"full\\"} -->
<div class=\\"wp-block-cover alignfull has-background-dim\\"><img class=\\"wp-block-cover__image-background wp-image-19\\" alt=\\"\\" src=\\"https://static.wixstatic.com/media/F9OC3_zZAcXfndF5z2Of4n5SKFw2Im3kKBwHP~mv2.jpg\\" data-object-fit=\\"cover\\"/><div class=\\"wp-block-cover__inner-container\\"><!-- wp:heading -->
<h2><strong>Rockfield</strong></h2>
<!-- /wp:heading -->

<!-- wp:paragraph -->
<p>Visitors will want to know who is on the other side of the page. Use this space to write about your business.</p>
<!-- /wp:paragraph -->

<!-- wp:heading -->
<h2><strong>Open Hours</strong></h2>
<!-- /wp:heading -->

<!-- wp:paragraph -->
<p><strong>Mon:</strong>&nbsp;closed<br>Tue – Sun: 11:30 am – 10:00 pm</p>
<!-- /wp:paragraph -->

<!-- wp:heading -->
<h2><strong>Location</strong></h2>
<!-- /wp:heading -->

<!-- wp:paragraph -->
<p>Example Street,<br>Anytown, NY 10100</p>
<!-- /wp:paragraph -->

<!-- wp:heading -->
<h2><strong>Reservation</strong></h2>
<!-- /wp:heading -->

<!-- wp:paragraph -->
<p>(555) 555 1234<br>example4@example.com</p>
<!-- /wp:paragraph --></div></div>
<!-- /wp:cover -->]]></content:encoded>
		<wp:comment_status><![CDATA[closed]]></wp:comment_status>
		<wp:status><![CDATA[publish]]></wp:status>
		<wp:post_type><![CDATA[page]]></wp:post_type>
		<wp:is_sticky>0</wp:is_sticky>
	</item>
	<item>
		<wp:post_id>7</wp:post_id>
		<title><![CDATA[Winter Menu]]></title>
		<description></description>
		<content:encoded><![CDATA[<!-- wp:heading {\\"level\\":1} -->
<h1><strong>Winter Menu</strong></h1>
<!-- /wp:heading -->

<!-- wp:paragraph -->
<p>This winter season come and join us for hearty soups and stews, cheesy gratins and casseroles. These delicious items can be found on our seasonal menu, with specials changing daily.</p>
<!-- /wp:paragraph -->

<!-- wp:image {\\"width\\":1024,\\"height\\":682} -->
<figure class=\\"wp-block-image is-resized\\"><img src=\\"https://static.wixstatic.com/media/7oW5n_JRVYOJnRJpeGHE1bJBAgkY2XaBqeOsl~mv2.jpg\\" alt=\\"appetizer-blurred-background-cheese-2531\\" width=\\"1024\\" height=\\"682\\"/></figure>
<!-- /wp:image -->

<!-- wp:group -->
<div class=\\"wp-block-group\\"><!-- wp:heading -->
<h2><strong>Published by Joan Smith</strong></h2>
<!-- /wp:heading -->

<!-- wp:paragraph -->
<p>My name is Joan Smith. I love discovering new literature.&nbsp;<a>View more posts</a></p>
<!-- /wp:paragraph --></div>
<!-- /wp:group -->

<!-- wp:separator -->
<hr class=\\"wp-block-separator\\"/>
<!-- /wp:separator -->

<!-- wp:paragraph -->
<p>Previous Post</p>
<!-- /wp:paragraph -->

<!-- wp:heading {\\"level\\":3} -->
<h3><a>Christmas Party at Rockfield’s</a></h3>
<!-- /wp:heading -->

<!-- wp:paragraph -->
<p>Next Post</p>
<!-- /wp:paragraph -->

<!-- wp:heading {\\"level\\":3} -->
<h3><a>Tricks to Plating Like a Pro</a></h3>
<!-- /wp:heading -->]]></content:encoded>
		<wp:comment_status><![CDATA[closed]]></wp:comment_status>
		<wp:status><![CDATA[publish]]></wp:status>
		<wp:post_type><![CDATA[page]]></wp:post_type>
		<wp:is_sticky>0</wp:is_sticky>
	</item>
	<item>
		<wp:post_id>8</wp:post_id>
		<title><![CDATA[Tricks to Plating Like a Pro]]></title>
		<description></description>
		<content:encoded><![CDATA[<!-- wp:heading {\\"level\\":1} -->
<h1><strong>Tricks to Plating Like a Pro</strong></h1>
<!-- /wp:heading -->

<!-- wp:paragraph -->
<p>Food presentation is the art of modifying, processing, arranging, or decorating food to enhance its aesthetic appeal.</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p>​</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p>The visual presentation of foods is often considered by chefs at many different stages of food preparation, from the manner of tying or sewing meats, to the type of cut used in chopping and slicing meats or vegetables, to the style of mold used in a poured dish. The food itself may be decorated as in elaborately iced cakes, topped with ornamental sometimes sculptural consumables, drizzled with sauces, sprinkled with seeds, powders, or other toppings, or it may be accompanied by edible or inedible garnishes.</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p>​</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p>The arrangement and overall styling of food upon bringing it to the plate is termed plating. Some common styles of plating include a ‘classic’ arrangement of the main item in the front of the plate with vegetables or starches in the back, a ‘stacked’ arrangement of the various items, or the main item leaning or ‘shingled’ upon a vegetable bed or side item. Item location on the plate is often referenced as for the face of a clock, with six o’clock the position closest to the diner.</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p>​</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p>A basic rule of thumb upon plating, and even in some cases prepping, is to make sure you have the 5 components to a dish; protein, traditionally at a 6 o’clock position, vegetable, at a 2 o’clock position, starch at an 11 o’clock position, sauce and garnish.</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p>​</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p>From&nbsp;<a>Wikipedia</a>.</p>
<!-- /wp:paragraph -->

<!-- wp:group -->
<div class=\\"wp-block-group\\"><!-- wp:heading -->
<h2><strong>Published by Joan Smith</strong></h2>
<!-- /wp:heading -->

<!-- wp:paragraph -->
<p>My name is Joan Smith. I love discovering new literature.&nbsp;<a>View more posts</a></p>
<!-- /wp:paragraph --></div>
<!-- /wp:group -->

<!-- wp:separator -->
<hr class=\\"wp-block-separator\\"/>
<!-- /wp:separator -->

<!-- wp:paragraph -->
<p>Previous Post</p>
<!-- /wp:paragraph -->

<!-- wp:heading {\\"level\\":3} -->
<h3><a>Winter Menu</a></h3>
<!-- /wp:heading -->]]></content:encoded>
		<wp:comment_status><![CDATA[closed]]></wp:comment_status>
		<wp:status><![CDATA[publish]]></wp:status>
		<wp:post_type><![CDATA[page]]></wp:post_type>
		<wp:is_sticky>0</wp:is_sticky>
	</item>
	<item>
		<wp:post_id>9</wp:post_id>
		<title><![CDATA[header]]></title>
		<description></description>
		<content:encoded><![CDATA[<!-- wp:columns -->
<div class=\\"wp-block-columns\\"><!-- wp:column -->
<div class=\\"wp-block-column\\"><!-- wp:paragraph -->
<p><strong><a>Rockfield</a></strong>&nbsp; Award-winning Restaurant in Anytown</p>
<!-- /wp:paragraph --></div>
<!-- /wp:column -->

<!-- wp:column -->
<div class=\\"wp-block-column\\"><!-- wp:navigation {\\"orientation\\":\\"horizontal\\"} -->
<!-- wp:navigation-link {\\"label\\":\\"Home\\",\\"url\\":\\"/home\\"} /-->

<!-- wp:navigation-link {\\"label\\":\\"Menu\\",\\"url\\":\\"/menu\\"} -->
<!-- wp:navigation-link {\\"label\\":\\"Winter Menu\\",\\"url\\":\\"/winter-menu\\"} /-->
<!-- /wp:navigation-link -->

<!-- wp:navigation-link {\\"label\\":\\"What's On\\",\\"url\\":\\"/blog\\"} /-->

<!-- wp:navigation-link {\\"label\\":\\"Reservations\\",\\"url\\":\\"/reservations\\"} /-->
<!-- /wp:navigation --></div>
<!-- /wp:column --></div>
<!-- /wp:columns -->]]></content:encoded>
		<wp:comment_status><![CDATA[closed]]></wp:comment_status>
		<wp:status><![CDATA[publish]]></wp:status>
		<wp:post_type><![CDATA[wp_template_part]]></wp:post_type>
		<wp:is_sticky>0</wp:is_sticky>
		<category domain=\\"wp_template_part_area\\" nicename=\\"header\\">header</category>
		<category domain=\\"wp_theme\\" nicename=\\"tt1-blocks\\">tt1-blocks</category>
	</item>
	<item>
		<wp:post_id>12</wp:post_id>
		<title><![CDATA[footer]]></title>
		<description></description>
		<content:encoded><![CDATA[<!-- wp:social-links {\\"openInNewTab\\":true} -->
<ul class=\\"wp-block-social-links\\"><!-- wp:social-link {\\"url\\":\\"https://www.facebook.com/wix\\",\\"service\\":\\"facebook\\",\\"label\\":\\"Facebook\\"} /-->

<!-- wp:social-link {\\"label\\":\\"Instagram\\"} /-->

<!-- wp:social-link {\\"label\\":\\"foursquare-2-xxl\\"} /-->

<!-- wp:social-link {\\"label\\":\\"Yelp\\"} /--></ul>
<!-- /wp:social-links -->

<!-- wp:navigation {\\"orientation\\":\\"horizontal\\"} -->
<!-- wp:navigation-link {\\"label\\":\\"Home\\",\\"url\\":\\"/home\\"} /-->

<!-- wp:navigation-link {\\"label\\":\\"Menu\\",\\"url\\":\\"/menu\\"} -->
<!-- wp:navigation-link {\\"label\\":\\"Winter Menu\\",\\"url\\":\\"/winter-menu\\"} /-->
<!-- /wp:navigation-link -->

<!-- wp:navigation-link {\\"label\\":\\"What's On\\",\\"url\\":\\"/blog\\"} /-->

<!-- wp:navigation-link {\\"label\\":\\"Reservations\\",\\"url\\":\\"/reservations\\"} /-->
<!-- /wp:navigation -->]]></content:encoded>
		<wp:comment_status><![CDATA[closed]]></wp:comment_status>
		<wp:status><![CDATA[publish]]></wp:status>
		<wp:post_type><![CDATA[wp_template_part]]></wp:post_type>
		<wp:is_sticky>0</wp:is_sticky>
		<category domain=\\"wp_template_part_area\\" nicename=\\"footer\\">footer</category>
		<category domain=\\"wp_theme\\" nicename=\\"wp_theme\\">tt1-blocks</category>
	</item>
	<item>
		<wp:post_id>22</wp:post_id>
		<title><![CDATA[Home]]></title>
		<description></description>
		<wp:comment_status><![CDATA[open]]></wp:comment_status>
		<wp:status><![CDATA[publish]]></wp:status>
		<wp:post_parent>0</wp:post_parent>
		<wp:menu_order>0</wp:menu_order>
		<wp:post_type><![CDATA[nav_menu_item]]></wp:post_type>
		<wp:is_sticky>0</wp:is_sticky>
		<category domain=\\"nav_menu\\" nicename=\\"custom-main-menu-1\\">Custom Main Menu</category>
		<wp:postmeta>
			<wp:meta_key>_menu_item_type</wp:meta_key>
			<wp:meta_value>post_type</wp:meta_value>
		</wp:postmeta>
		<wp:postmeta>
			<wp:meta_key>_menu_item_object_id</wp:meta_key>
			<wp:meta_value>6</wp:meta_value>
		</wp:postmeta>
		<wp:postmeta>
			<wp:meta_key>_menu_item_object</wp:meta_key>
			<wp:meta_value>page</wp:meta_value>
		</wp:postmeta>
	</item>
	<item>
		<wp:post_id>23</wp:post_id>
		<title><![CDATA[Menu]]></title>
		<description></description>
		<wp:comment_status><![CDATA[open]]></wp:comment_status>
		<wp:status><![CDATA[publish]]></wp:status>
		<wp:post_parent>0</wp:post_parent>
		<wp:menu_order>1</wp:menu_order>
		<wp:post_type><![CDATA[nav_menu_item]]></wp:post_type>
		<wp:is_sticky>0</wp:is_sticky>
		<category domain=\\"nav_menu\\" nicename=\\"custom-main-menu-1\\">Custom Main Menu</category>
		<wp:postmeta>
			<wp:meta_key>_menu_item_type</wp:meta_key>
			<wp:meta_value>post_type</wp:meta_value>
		</wp:postmeta>
		<wp:postmeta>
			<wp:meta_key>_menu_item_object_id</wp:meta_key>
			<wp:meta_value>1</wp:meta_value>
		</wp:postmeta>
		<wp:postmeta>
			<wp:meta_key>_menu_item_object</wp:meta_key>
			<wp:meta_value>page</wp:meta_value>
		</wp:postmeta>
	</item>
	<item>
		<wp:post_id>24</wp:post_id>
		<title><![CDATA[Winter Menu]]></title>
		<description></description>
		<wp:comment_status><![CDATA[open]]></wp:comment_status>
		<wp:status><![CDATA[publish]]></wp:status>
		<wp:post_parent>23</wp:post_parent>
		<wp:menu_order>2</wp:menu_order>
		<wp:post_type><![CDATA[nav_menu_item]]></wp:post_type>
		<wp:is_sticky>0</wp:is_sticky>
		<category domain=\\"nav_menu\\" nicename=\\"custom-main-menu-1\\">Custom Main Menu</category>
		<wp:postmeta>
			<wp:meta_key>_menu_item_type</wp:meta_key>
			<wp:meta_value>post_type</wp:meta_value>
		</wp:postmeta>
		<wp:postmeta>
			<wp:meta_key>_menu_item_menu_item_parent</wp:meta_key>
			<wp:meta_value>23</wp:meta_value>
		</wp:postmeta>
		<wp:postmeta>
			<wp:meta_key>_menu_item_object_id</wp:meta_key>
			<wp:meta_value>7</wp:meta_value>
		</wp:postmeta>
		<wp:postmeta>
			<wp:meta_key>_menu_item_object</wp:meta_key>
			<wp:meta_value>page</wp:meta_value>
		</wp:postmeta>
	</item>
	<item>
		<wp:post_id>27</wp:post_id>
		<title><![CDATA[What's On]]></title>
		<description></description>
		<wp:comment_status><![CDATA[open]]></wp:comment_status>
		<wp:status><![CDATA[publish]]></wp:status>
		<wp:post_parent>0</wp:post_parent>
		<wp:menu_order>5</wp:menu_order>
		<wp:post_type><![CDATA[nav_menu_item]]></wp:post_type>
		<wp:is_sticky>0</wp:is_sticky>
		<category domain=\\"nav_menu\\" nicename=\\"custom-main-menu-1\\">Custom Main Menu</category>
		<wp:postmeta>
			<wp:meta_key>_menu_item_type</wp:meta_key>
			<wp:meta_value>post_type</wp:meta_value>
		</wp:postmeta>
		<wp:postmeta>
			<wp:meta_key>_menu_item_object_id</wp:meta_key>
			<wp:meta_value>4</wp:meta_value>
		</wp:postmeta>
		<wp:postmeta>
			<wp:meta_key>_menu_item_object</wp:meta_key>
			<wp:meta_value>page</wp:meta_value>
		</wp:postmeta>
	</item>
	<item>
		<wp:post_id>28</wp:post_id>
		<title><![CDATA[Reservations]]></title>
		<description></description>
		<wp:comment_status><![CDATA[open]]></wp:comment_status>
		<wp:status><![CDATA[publish]]></wp:status>
		<wp:post_parent>0</wp:post_parent>
		<wp:menu_order>6</wp:menu_order>
		<wp:post_type><![CDATA[nav_menu_item]]></wp:post_type>
		<wp:is_sticky>0</wp:is_sticky>
		<category domain=\\"nav_menu\\" nicename=\\"custom-main-menu-1\\">Custom Main Menu</category>
		<wp:postmeta>
			<wp:meta_key>_menu_item_type</wp:meta_key>
			<wp:meta_value>post_type</wp:meta_value>
		</wp:postmeta>
		<wp:postmeta>
			<wp:meta_key>_menu_item_object_id</wp:meta_key>
			<wp:meta_value>5</wp:meta_value>
		</wp:postmeta>
		<wp:postmeta>
			<wp:meta_key>_menu_item_object</wp:meta_key>
			<wp:meta_value>page</wp:meta_value>
		</wp:postmeta>
	</item>
	<item>
		<wp:post_id>14</wp:post_id>
		<title><![CDATA[food.jpg]]></title>
		<link><![CDATA[https://static.wixstatic.com/media/ZDA5B_j5RedL9MFgZ0iaUowYVI71VO5RTpkl5~mv2.jpg]]></link>
		<guid isPermaLink=\\"false\\"><![CDATA[https://static.wixstatic.com/media/ZDA5B_j5RedL9MFgZ0iaUowYVI71VO5RTpkl5~mv2.jpg]]></guid>
		<description></description>
		<content:encoded><![CDATA[private/media-root]]></content:encoded>
		<excerpt:encoded><![CDATA[private/media-root]]></excerpt:encoded>
		<wp:comment_status><![CDATA[open]]></wp:comment_status>
		<wp:post_type><![CDATA[attachment]]></wp:post_type>
		<wp:is_sticky>0</wp:is_sticky>
		<wp:attachment_url><![CDATA[https://static.wixstatic.com/media/ZDA5B_j5RedL9MFgZ0iaUowYVI71VO5RTpkl5~mv2.jpg]]></wp:attachment_url>
		<wp:postmeta>
			<wp:meta_key>_wp_attachment_attachment_alt</wp:meta_key>
			<wp:meta_value>food.jpg</wp:meta_value>
		</wp:postmeta>
	</item>
	<item>
		<wp:post_id>15</wp:post_id>
		<title><![CDATA[1f44b.png]]></title>
		<link><![CDATA[https://static.wixstatic.com/media/JdmUI_yteJBoBtYToixmOFoNYXF40kUU5JdTh~mv2.png]]></link>
		<guid isPermaLink=\\"false\\"><![CDATA[https://static.wixstatic.com/media/JdmUI_yteJBoBtYToixmOFoNYXF40kUU5JdTh~mv2.png]]></guid>
		<description></description>
		<content:encoded><![CDATA[]]></content:encoded>
		<excerpt:encoded><![CDATA[]]></excerpt:encoded>
		<wp:comment_status><![CDATA[open]]></wp:comment_status>
		<wp:post_type><![CDATA[attachment]]></wp:post_type>
		<wp:is_sticky>0</wp:is_sticky>
		<wp:attachment_url><![CDATA[https://static.wixstatic.com/media/JdmUI_yteJBoBtYToixmOFoNYXF40kUU5JdTh~mv2.png]]></wp:attachment_url>
		<wp:postmeta>
			<wp:meta_key>_wp_attachment_attachment_alt</wp:meta_key>
			<wp:meta_value>1f44b.png</wp:meta_value>
		</wp:postmeta>
	</item>
	<item>
		<wp:post_id>16</wp:post_id>
		<title><![CDATA[appetizers-chef-cuisine-1267320-1-1.jpg]]></title>
		<link><![CDATA[https://static.wixstatic.com/media/5Dsu1_ZUNrjjTx3j1ZbikUbg2rP0eIE5gJllA~mv2.jpg]]></link>
		<guid isPermaLink=\\"false\\"><![CDATA[https://static.wixstatic.com/media/5Dsu1_ZUNrjjTx3j1ZbikUbg2rP0eIE5gJllA~mv2.jpg]]></guid>
		<description></description>
		<content:encoded><![CDATA[private]]></content:encoded>
		<excerpt:encoded><![CDATA[private]]></excerpt:encoded>
		<wp:comment_status><![CDATA[open]]></wp:comment_status>
		<wp:post_type><![CDATA[attachment]]></wp:post_type>
		<wp:is_sticky>0</wp:is_sticky>
		<wp:attachment_url><![CDATA[https://static.wixstatic.com/media/5Dsu1_ZUNrjjTx3j1ZbikUbg2rP0eIE5gJllA~mv2.jpg]]></wp:attachment_url>
		<wp:postmeta>
			<wp:meta_key>_wp_attachment_attachment_alt</wp:meta_key>
			<wp:meta_value>appetizers-chef-cuisine-1267320-1-1.jpg</wp:meta_value>
		</wp:postmeta>
	</item>
	<item>
		<wp:post_id>17</wp:post_id>
		<title><![CDATA[blur-chef-close-up-671956-1.jpg]]></title>
		<link><![CDATA[https://static.wixstatic.com/media/e7Sgo_zJMHqoFuuTQ541QbqX7LxbqG8Yc8KJE~mv2.jpg]]></link>
		<guid isPermaLink=\\"false\\"><![CDATA[https://static.wixstatic.com/media/e7Sgo_zJMHqoFuuTQ541QbqX7LxbqG8Yc8KJE~mv2.jpg]]></guid>
		<description></description>
		<content:encoded><![CDATA[private/media-root]]></content:encoded>
		<excerpt:encoded><![CDATA[private/media-root]]></excerpt:encoded>
		<wp:comment_status><![CDATA[open]]></wp:comment_status>
		<wp:post_type><![CDATA[attachment]]></wp:post_type>
		<wp:is_sticky>0</wp:is_sticky>
		<wp:attachment_url><![CDATA[https://static.wixstatic.com/media/e7Sgo_zJMHqoFuuTQ541QbqX7LxbqG8Yc8KJE~mv2.jpg]]></wp:attachment_url>
		<wp:postmeta>
			<wp:meta_key>_wp_attachment_attachment_alt</wp:meta_key>
			<wp:meta_value>blur-chef-close-up-671956-1.jpg</wp:meta_value>
		</wp:postmeta>
	</item>
	<item>
		<wp:post_id>18</wp:post_id>
		<title><![CDATA[ceiling-chairs-clean-2225570-1-1.jpg]]></title>
		<link><![CDATA[https://static.wixstatic.com/media/sXYIH_PerVF1DoW7DmMdKJeul0lYHXnlbnWBW~mv2.jpg]]></link>
		<guid isPermaLink=\\"false\\"><![CDATA[https://static.wixstatic.com/media/sXYIH_PerVF1DoW7DmMdKJeul0lYHXnlbnWBW~mv2.jpg]]></guid>
		<description></description>
		<content:encoded><![CDATA[private]]></content:encoded>
		<excerpt:encoded><![CDATA[private]]></excerpt:encoded>
		<wp:comment_status><![CDATA[open]]></wp:comment_status>
		<wp:post_type><![CDATA[attachment]]></wp:post_type>
		<wp:is_sticky>0</wp:is_sticky>
		<wp:attachment_url><![CDATA[https://static.wixstatic.com/media/sXYIH_PerVF1DoW7DmMdKJeul0lYHXnlbnWBW~mv2.jpg]]></wp:attachment_url>
		<wp:postmeta>
			<wp:meta_key>_wp_attachment_attachment_alt</wp:meta_key>
			<wp:meta_value>ceiling-chairs-clean-2225570-1-1.jpg</wp:meta_value>
		</wp:postmeta>
	</item>
	<item>
		<wp:post_id>19</wp:post_id>
		<title><![CDATA[boston-https-whitlockdesigns-com-interio]]></title>
		<link><![CDATA[https://static.wixstatic.com/media/F9OC3_zZAcXfndF5z2Of4n5SKFw2Im3kKBwHP~mv2.jpg]]></link>
		<guid isPermaLink=\\"false\\"><![CDATA[https://static.wixstatic.com/media/F9OC3_zZAcXfndF5z2Of4n5SKFw2Im3kKBwHP~mv2.jpg]]></guid>
		<description></description>
		<content:encoded><![CDATA[private/media-root]]></content:encoded>
		<excerpt:encoded><![CDATA[private/media-root]]></excerpt:encoded>
		<wp:comment_status><![CDATA[open]]></wp:comment_status>
		<wp:post_type><![CDATA[attachment]]></wp:post_type>
		<wp:is_sticky>0</wp:is_sticky>
		<wp:attachment_url><![CDATA[https://static.wixstatic.com/media/F9OC3_zZAcXfndF5z2Of4n5SKFw2Im3kKBwHP~mv2.jpg]]></wp:attachment_url>
		<wp:postmeta>
			<wp:meta_key>_wp_attachment_attachment_alt</wp:meta_key>
			<wp:meta_value>boston-https-whitlockdesigns-com-interio</wp:meta_value>
		</wp:postmeta>
	</item>
	<item>
		<wp:post_id>20</wp:post_id>
		<title><![CDATA[appetizer-blurred-background-cheese-2531]]></title>
		<link><![CDATA[https://static.wixstatic.com/media/7oW5n_JRVYOJnRJpeGHE1bJBAgkY2XaBqeOsl~mv2.jpg]]></link>
		<guid isPermaLink=\\"false\\"><![CDATA[https://static.wixstatic.com/media/7oW5n_JRVYOJnRJpeGHE1bJBAgkY2XaBqeOsl~mv2.jpg]]></guid>
		<description></description>
		<content:encoded><![CDATA[]]></content:encoded>
		<excerpt:encoded><![CDATA[]]></excerpt:encoded>
		<wp:comment_status><![CDATA[open]]></wp:comment_status>
		<wp:post_type><![CDATA[attachment]]></wp:post_type>
		<wp:is_sticky>0</wp:is_sticky>
		<wp:attachment_url><![CDATA[https://static.wixstatic.com/media/7oW5n_JRVYOJnRJpeGHE1bJBAgkY2XaBqeOsl~mv2.jpg]]></wp:attachment_url>
		<wp:postmeta>
			<wp:meta_key>_wp_attachment_attachment_alt</wp:meta_key>
			<wp:meta_value>appetizer-blurred-background-cheese-2531</wp:meta_value>
		</wp:postmeta>
	</item>
</channel>
</rss>"
`;

exports[`wix: wix-basic.har 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\" ?>

<!-- This is a WordPress eXtended RSS file generated by the \\"Free (as in Speech)\\" browser extension, as an export of your site. -->
<!-- It contains information about your site's posts, pages, comments, categories, and other content. -->
<!-- You may use this file to transfer that content from one site to another. -->
<!-- This file is not intended to serve as a complete backup of your site. -->

<!-- To import this information into a WordPress site follow these steps: -->
<!-- 1. Log in to that site as an administrator. -->
<!-- 2. Go to Tools: Import in the WordPress admin panel. -->
<!-- 3. Install the \\"WordPress\\" importer from the list. -->
<!-- 4. Activate & Run Importer. -->
<!-- 5. Upload this file using the form provided on that page. -->
<!-- 6. You will first be asked to map the authors in this export file to users -->
<!--    on the site. For each author, you may choose to map to an -->
<!--    existing user on the site or to create a new user. -->
<!-- 7. WordPress will then import each of the posts, pages, comments, categories, etc. -->
<!--    contained in this file into your site. -->

<rss version=\\"2.0\\"
	xmlns:excerpt=\\"http://wordpress.org/export/1.3/excerpt/\\"
	xmlns:content=\\"http://purl.org/rss/1.0/modules/content/\\"
	xmlns:wfw=\\"http://wellformedweb.org/CommentAPI/\\"
	xmlns:dc=\\"http://purl.org/dc/elements/1.1/\\"
	xmlns:wp=\\"http://wordpress.org/export/1.3/\\"
>
<channel>
	<title><![CDATA[mywebsite]]></title>
	<link><![CDATA[https://12345678.wixsite.com/mywebsite]]></link>
	<pubDate></pubDate>
	<wp:wxr_version>1.3</wp:wxr_version>
	<wp:base_site_url><![CDATA[https://12345678.wixsite.com/mywebsite]]></wp:base_site_url>
	<wp:base_blog_url><![CDATA[https://12345678.wixsite.com/mywebsite]]></wp:base_blog_url>
	<wp:author>
		<wp:author_login><![CDATA[admin]]></wp:author_login>
		<wp:author_display_name><![CDATA[]]></wp:author_display_name>
	</wp:author>
	<item>
		<title><![CDATA[Hello World]]></title>
		<pubDate><![CDATA[Wed, 27 Jan 2021 08:20:41 GMT]]></pubDate>
		<dc:creator><![CDATA[admin]]></dc:creator>
		<guid isPermaLink=\\"false\\"><![CDATA[6676d9d6-0318-4dcc-881f-ba6482cff48d]]></guid>
		<description></description>
		<content:encoded><![CDATA[<!-- wp:paragraph -->
<p>This is my first entry.</p>
<!-- /wp:paragraph -->]]></content:encoded>
		<wp:post_date><![CDATA[2021-01-27 08:20:41]]></wp:post_date>
		<wp:comment_status><![CDATA[open]]></wp:comment_status>
		<wp:status><![CDATA[publish]]></wp:status>
		<wp:post_type><![CDATA[post]]></wp:post_type>
		<wp:is_sticky>0</wp:is_sticky>
	</item>
	<item>
		<title><![CDATA[Draft]]></title>
		<pubDate><![CDATA[]]></pubDate>
		<dc:creator><![CDATA[admin]]></dc:creator>
		<guid isPermaLink=\\"false\\"><![CDATA[1578305e-fcbe-4767-b656-72d409d27bff]]></guid>
		<description></description>
		<content:encoded><![CDATA[]]></content:encoded>
		<wp:post_date><![CDATA[]]></wp:post_date>
		<wp:comment_status><![CDATA[open]]></wp:comment_status>
		<wp:status><![CDATA[draft]]></wp:status>
		<wp:post_type><![CDATA[post]]></wp:post_type>
		<wp:is_sticky>0</wp:is_sticky>
	</item>
</channel>
</rss>"
`;
